# CPP

./: .gitignore  CPP_Projektmappe.sln  Makefile  README.md
01_Abschlussprojekt/: 01_Abschlussprojekt.vcxproj  main.cpp
01_CPP Beginner/: 00_Variablen.cpp  01_CPP Beginner.vcxproj  01_CPP Beginner.vcxproj.filters  01_example1.cpp  02_example2.cpp  03_example3.cpp  04_Abfragen.cpp  05_example1.cpp  06_Modulo.cpp  07_Switch.cpp  08_For-Schleifen.cpp  09_example1.cpp  10_example2.cpp  11_Geschachtelte_For_Schleife.cpp  (+3 more)
src/games/01_Simple_SDL_Game/: .cproject  01_Simple_SDL_Game.sln  01_Simple_SDL_Game.vcxproj  01_Simple_SDL_Game.vcxproj.filters  AudioHandler.cpp  AudioHandler.h  Ball.cpp  Ball.h  CMakeLists.txt  Entity.cpp  Entity.h  Event.cpp  Event.h  Game.cpp  Game.h  GraphicsData.h  GraphicsHandler.cpp  GraphicsHandler.h  InputProcessor.h  Main.cpp  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  Rectangle.cpp  Rectangle.h  SDLHandler.cpp  SDLHandler.h  SDLInputProcessor.cpp  SDLInputProcessor.h  Shape2D.h  Shape3D.h  Sprite.cpp  Sprite.h  Wall.cpp  Wall.h  run.bat  test.cpp
src/games/01_Simple_SDL_Game/_core/: Game.cpp  Game.h
src/games/01_Simple_SDL_Game/_data/: GraphicsData.h  Mesh.cpp  Mesh.h  Rectangle.cpp  Rectangle.h  Shape2D.h  Shape3D.h  Sprite.cpp  Sprite.h
src/games/01_Simple_SDL_Game/_game_entities/: Ball.cpp  Entity.cpp  Player.h  Wall.h
src/games/01_Simple_SDL_Game/_helper/: Math.cpp  Math.h
src/games/01_Simple_SDL_Game/_output/: AudioHandler.cpp  AudioHandler.h  GraphicsHandler.cpp  GraphicsHandler.h  SDLHandler.cpp  SDLHandler.h
(+116 files in other folders)
